# STM_TL2

./: .gitignore  CMakeLists.txt  README.md
234747/: stm_structures.h  tl2_utils.c  tl2_utils.h  tm.c  utils.c  utils.h
grading/: common.hpp  grading
playground/: entrypoint.cpp  entrypoint.hpp  playground
reference/: tm.c
